# Desafio-python-jr

./: README.md  project. yaml
.github/workflows/: python-app.yml
api-voluntarios/: crud.py  database.py  dependencies.py  init.py  main.py  models.py  pyproject.toml  schemas.py
api-voluntarios/static/: index.html
templates/: index.html
tests/: test_main.py
