[tool.poetry]
name = "api-voluntarios"
version = "1.0.0"
description = "API de Gerenciamento de Voluntários"
authors = ["Dione Castro Alves <innovaideia2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
flake8 = "^6.1.0"
black = "^23.11.0"  # Opcional para formatação

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.poetry.scripts]
run = "main:main"

